--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ h1 {
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
-  color: rgba(255, 255, 255, 0.4);
+  color: #FFFFFF;
 }
 
 textarea {
@@ -63,7 +63,7 @@ textarea:focus {
   font-size: 13.3278px;
   line-height: 120%;
   letter-spacing: -0.168944px;
-  color: #FFFFFF;
+  color: #BBBBBB;
   display: flex;
   margin-bottom: 26.08px;
 }
